feat: add tests

--- a/product-service/package.json
+++ b/product-service/package.json
@@ -2,16 +2,21 @@
   "name": "products-service-ecma",
   "version": "1.0.0",
   "description": "Serverless webpack example using ecma script",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
+    "aws-sdk": "^2.977.0",
+    "aws-sdk-mock": "^5.2.2",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
+    "jest": "^27.0.6",
+    "serverless-jest-plugin": "^0.3.0",
     "serverless-webpack": "^5.3.1",
     "webpack": "^4.35.2"
   },
