--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -8,6 +8,14 @@ frameworkVersion: '2'
 # Add the serverless-webpack plugin
 plugins:
   - serverless-webpack
+  - serverless-jest-plugin
+
+custom:
+  jest:
+    # You can pass jest options here
+    # See details here: https://facebook.github.io/jest/docs/configuration.html
+    # For instance, uncomment next line to enable code coverage
+    collectCoverage: true
 
 provider:
   name: aws
