--- a/product-service/package.json
+++ b/product-service/package.json
@@ -17,10 +17,14 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "jest": "^27.0.6",
+    "serverless-dotenv-plugin": "^3.9.0",
     "serverless-jest-plugin": "^0.3.0",
     "serverless-webpack": "^5.3.1",
     "webpack": "^4.35.2"
   },
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "pg": "^8.7.1"
+  }
 }
