--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -8,7 +8,7 @@ frameworkVersion: '2'
 # Add the serverless-webpack plugin
 plugins:
   - serverless-webpack
-  - serverless-jest-plugin
+  - serverless-dotenv-plugin
 
 custom:
   webpack:
@@ -27,6 +27,12 @@ provider:
   stage: dev
   httpApi:
     cors: true
+  environment:
+    PG_HOST: ${env:PG_HOST}
+    PG_PORT: ${env:PG_PORT}
+    PG_DB_NAME: ${env:PG_DB_NAME}
+    PG_USER: ${env:PG_USER}
+    PG_PASSWORD: ${env:PG_PASSWORD}
 
 functions:
   getProductsList:
@@ -42,3 +48,10 @@ functions:
       - httpApi:
           method: get
           path: /products/{id}
+
+  createProduct:
+    handler: handler.createProduct
+    events:
+      - httpApi:
+          method: post
+          path: /products
