--- a/product-service/package.json
+++ b/product-service/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "test": "jest"
   },
+  "dependencies": {
+    "pg": "^8.7.1",
+    "validator": "^13.6.0"
+  },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.11.1",
@@ -23,8 +27,5 @@
     "webpack": "^4.35.2"
   },
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
-  "license": "MIT",
-  "dependencies": {
-    "pg": "^8.7.1"
-  }
+  "license": "MIT"
 }
