--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -3,7 +3,7 @@ service:
 # app and org for use with dashboard.serverless.com
 #app: your-app-name
 #org: your-org-name
-frameworkVersion: '2'
+frameworkVersion: "2"
 
 # Add the serverless-webpack plugin
 plugins:
@@ -12,12 +12,7 @@ plugins:
 
 custom:
   webpack:
-    webpackConfig: 'webpack.config.js' # Name of webpack configuration file
-  jest:
-    # You can pass jest options here
-    # See details here: https://facebook.github.io/jest/docs/configuration.html
-    # For instance, uncomment next line to enable code coverage
-    collectCoverage: true
+    webpackConfig: "webpack.config.js" # Name of webpack configuration file
 
 provider:
   name: aws
@@ -38,9 +33,9 @@ functions:
   getProductsList:
     handler: handler.getProductsList
     events:
-     - httpApi:
-         path: /products
-         method: get
+      - httpApi:
+          path: /products
+          method: get
 
   getProductsById:
     handler: handler.getProductsById
