--- a/product-service/package.json
+++ b/product-service/package.json
@@ -22,6 +22,7 @@
     "babel-preset-env": "^1.6.0",
     "jest": "^27.0.6",
     "serverless-dotenv-plugin": "^3.9.0",
+    "serverless-export-outputs": "^1.0.2",
     "serverless-jest-plugin": "^0.3.0",
     "serverless-webpack": "^5.3.1",
     "webpack": "^4.35.2"
