--- a/bff-service/.ebextensions/options.config
+++ b/bff-service/.ebextensions/options.config
@@ -1,5 +1,5 @@
 option_settings:
-  aws:elasticbeanstalk:application:enviroment:
+  aws:elasticbeanstalk:application:environment:
     NODE_ENV: 'production'
     product: 'https://fmfiacgetl.execute-api.eu-west-1.amazonaws.com'
     cart: 'https://nn9tlrdcij.execute-api.eu-west-1.amazonaws.com/dev/api'
