--- a/bff-service/.ebextensions/options.config
+++ b/bff-service/.ebextensions/options.config
@@ -2,4 +2,4 @@ option_settings:
   aws:elasticbeanstalk:application:environment:
     NODE_ENV: 'production'
     product: 'https://fmfiacgetl.execute-api.eu-west-1.amazonaws.com'
-    cart: 'https://nn9tlrdcij.execute-api.eu-west-1.amazonaws.com/dev/api'
+    cart: 'http://pryvvid-cart-api-develop.eu-west-1.elasticbeanstalk.com/api/profile'
