--- a/bff-service/package.json
+++ b/bff-service/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon index.js",
-    "start:dev": "node index.js",
+    "start": "node index.js",
+    "start:dev": "nodemon index.js",
     "eb-init": "eb init pryvvid-bff-api --platform node.js --region eu-west-1",
     "eb-create": "eb create bff-dev --single --cname pryvvid-bff-api-dev"
   },
