--- a/bff-service/express/package.json
+++ b/bff-service/express/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "node index.js",
     "start:dev": "nodemon index.js",
-    "eb-init": "eb init pryvvid-bff-api --platform node.js --region eu-west-1",
-    "eb-create": "eb create bff-dev --single --cname pryvvid-bff-api-dev",
+    "eb-init": "eb init pryvvid-bff-express-api --platform node.js --region eu-west-1",
+    "eb-create": "eb create bff-express-dev --single --cname pryvvid-bff-express-api-dev",
     "eb-deploy": "eb deploy"
   },
   "dependencies": {
