--- a/bff-service/nestjs/package.json
+++ b/bff-service/nestjs/package.json
@@ -13,7 +13,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "start:eb": "npm i --only=production && npm run build && npm run start:prod",
+    "start:eb": "npm run build && npm run start:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "eb-init": "eb init pryvvid-bff-api --platform node.js --region eu-west-1",
     "eb-create": "eb create bff-dev --single --cname pryvvid-bff-api-dev",
